--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular-devkit/build-angular": "^21.0.4",
     "@angular/cli": "^21.0.4",
     "@angular/compiler-cli": "^21.0.6",
+    "@modelcontextprotocol/sdk": "^1.25.2",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
@@ -46,5 +47,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.9.0"
+  },
+  "overrides": {
+    "@modelcontextprotocol/sdk": "^1.25.2"
   }
 }
